styles added to LogIn

--- a/Proyecto/app/src/main/res/values/strings.xml
+++ b/Proyecto/app/src/main/res/values/strings.xml
@@ -20,6 +20,11 @@
     <string name="InfoLogIn">Don’t have an account?</string>
     <string name="SingUp">Sing Up</string>
 
+    <string name="textHomeNameO">O</string>
+    <string name="textHomeName">rder</string>
+    <string name="textHome1">       your food in a simple tap!</string>
+    <string name="textHome2">Our mission is make simple, fastest and create a better experience with your customers </string>
+    <string name="OrderNow">¡Order now!</string>
 
 
 
